[surepetcare] fixed java 11 compiler warning about deprectated Integer constructor
Signed-off-by: Rene Scherer <rene@scherer-online.com>